--- a/tier3/condor/config.d/10-base.conf
+++ b/tier3/condor/config.d/10-base.conf
@@ -4,7 +4,7 @@
 ###############################################################################
 
 # Domain information, contact information, and description 
-UID_DOMAIN = uct3-condor.mwt2.org 
+UID_DOMAIN = $(UID_DOMAIN) 
 CONDOR_HOST = uct3-condor.mwt2.org 
 FILESYSTEM_DOMAIN = $(UID_DOMAIN)
 CONDOR_ADMIN = root@$(FULL_HOSTNAME)
