--- a/tier3/condor/config.d/10-base.conf
+++ b/tier3/condor/config.d/10-base.conf
@@ -5,7 +5,7 @@
 
 # Domain information, contact information, and description 
 UID_DOMAIN = $(UID_DOMAIN) 
-CONDOR_HOST = uct3-condor.mwt2.org 
+CONDOR_HOST = uct3-condor.uchicago.edu
 FILESYSTEM_DOMAIN = $(UID_DOMAIN)
 CONDOR_ADMIN = root@$(FULL_HOSTNAME)
 EMAIL_DOMAIN = $(FULL_HOSTNAME)
@@ -18,3 +18,5 @@ SLOT5_USER = uct3
 SLOT6_USER = uct3
 SLOT7_USER = uct3
 SLOT8_USER = uct3
+
+CCB_ADDRESS = 128.135.158.246
