kvm/libvirtd WNs now advertise 'HAS_TIER3_NFS=TRUE'

--- a/atlas-tier3/condor/config.d/50-classads.conf
+++ b/atlas-tier3/condor/config.d/50-classads.conf
@@ -4,4 +4,5 @@
 ###############################################################################
 
 HAS_CVMFS = TRUE
-STARTD_ATTRS = $(STARTD_ATTRS), HAS_CVMFS
+HAS_TIER3_NFS = TRUE
+STARTD_ATTRS = $(STARTD_ATTRS), HAS_CVMFS, HAS_TIER3_NFS
