fixed a bug due to renaming 30-flocking to 30-network in condor config

--- a/atlas-tier3/condor/config.d/30-network.conf
+++ b/atlas-tier3/condor/config.d/30-network.conf
@@ -1,5 +1,5 @@
 ###############################################################################
-# File:        30-flocking.conf                                               #
+# File:        30-network.conf                                                #
 # Description: Configures htcondor for network communication and flocking     #
 ###############################################################################
 
