changed network config to use TCP forwarding host

--- a/osg-connect/condor/config.d/30-network.conf
+++ b/osg-connect/condor/config.d/30-network.conf
@@ -3,8 +3,4 @@
 # Description: Configures htcondor for network communication and flocking     #
 ###############################################################################
 
-# Allow flocking from UC3 and MWT2
-ALLOW_WRITE = $(ALLOW_WRITE), *.mwt2.org, *.uchicago.edu, uct2-*.uchicago.edu, iut2-*.iu.edu, mwt2-gk.campuscluster.illinois.edu
-
-# Condor connection brokering to get around NAT
-CCB_ADDRESS = 128.135.158.173
+ALLOW_WRITE = $(ALLOW_WRITE), *.mwt2.org, *.uchicago.edu, *.osgconnect.net
