added more slot users

--- a/osg-connect/condor/config.d/10-base.conf
+++ b/osg-connect/condor/config.d/10-base.conf
@@ -18,5 +18,13 @@ SLOT5_USER = osg
 SLOT6_USER = osg
 SLOT7_USER = osg
 SLOT8_USER = osg
+SLOT9_USER = osg
+SLOT10_USER = osg
+SLOT11_USER = osg
+SLOT12_USER = osg
+SLOT13_USER = osg
+SLOT14_USER = osg
+SLOT15_USER = osg
+SLOT16_USER = osg
 
 NUM_SLOTS=10
