--- a/osg-connect/condor/config.d/50-classads.conf
+++ b/osg-connect/condor/config.d/50-classads.conf
@@ -4,4 +4,5 @@
 ###############################################################################
 
 HAS_CVMFS = TRUE
-STARTD_ATTRS = $(STARTD_ATTRS), HAS_CVMFS
+IS_EC2 = TRUE
+STARTD_ATTRS = $(STARTD_ATTRS), HAS_CVMFS, IS_EC2
