made some condor changes and rc.local changs

--- a/osg-connect/condor/config.d/30-network.conf
+++ b/osg-connect/condor/config.d/30-network.conf
@@ -4,3 +4,4 @@
 ###############################################################################
 
 ALLOW_WRITE = $(ALLOW_WRITE), *.mwt2.org, *.uchicago.edu, *.osgconnect.net
+ALLOW_DAEMON=$(CONDOR_HOST)
